--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html, body, #root {
     display: flex;
     justify-content: center;
     align-items: center;
+    background: linear-gradient(rebeccapurple, mediumpurple)
 }
 
 body {
