--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,28 @@ body {
 .header > h3 {
     margin: 3px 0;
 }
+
+.diceContainer {
+    padding: 25px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 40px 40px;
+    gap: 18px;
+}
+
+.dice {
+    width: 30px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 24px;
+    text-align: center;
+    padding: 5px;
+    color: #2B283A;
+    cursor: pointer;
+}
+
+.dice.selected {
+    background-color: #59E391;
+}
