--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
     padding: 25px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 40px 40px;
+    grid-template-rows: repeat(2, 40px);
     gap: 18px;
 }
 
@@ -55,8 +55,25 @@ body {
     padding: 5px;
     color: #2B283A;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .dice.selected {
     background-color: #59E391;
 }
+
+button {
+    width: 92px;
+    height: 35px;
+    background-color: #5035FF;
+    color: white;
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.18);
+    border-radius: 4px;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    cursor: pointer;
+}
+
